--- a/public/css/tail-style.css
+++ b/public/css/tail-style.css
@@ -678,6 +678,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -692,6 +696,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-1 {
   margin-top: 0.25rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .box-border {
@@ -736,6 +744,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-1\/6 {
   width: 16.666667%;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.list-outside {
+  list-style-position: outside;
 }
 
 .list-none {
@@ -848,6 +872,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pl-0 {
   padding-left: 0px;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .font-mono {
