--- a/views/partials/join.handlebars
+++ b/views/partials/join.handlebars
@@ -1,18 +1,17 @@
-<div class="flex flex-col">
+<div class="flex flex-col w-80">
     <h3>Join</h3>
-    <a class="flex flex-col box-border border-2 p-3">
-        <ul>
-            {{#each Game}}
-                <li>
-                    <h4>{{board.owner}}
-                </li>
-            {{/each}}
-            <li class="flex flex-col box-border border-2 hover:bg-black-500">
-                <h4>user1</h4>
-            </li>
-            <li class="flex flex-col box-border border-2">
-                <h4>user2</h4>
-            </li>
-        </ul>
+    <a class="flex flex-col">
+        <div class="flex flex-col text-center box-border border-2 mt-3">
+            user1
+            <button class="box-border border-2">Join Game</button>
+        </div>
+        <div class="flex flex-col text-center box-border border-2 mt-3">
+            user1
+            <button class="box-border border-2">Join Game</button>
+        </div>
+        <div class="flex flex-col text-center box-border border-2 mt-3">
+            user1
+            <button class="box-border border-2">Join Game</button>
+        </div>
     </a>
 </div>
