--- a/views/partials/resume.handlebars
+++ b/views/partials/resume.handlebars
@@ -1,21 +1,23 @@
-<div class="flex flex-col">
+<div class="flex flex-col w-80">
     <h3>Resume Game</h3>
-    <a>
-        <ul class="list-none">
-            {{#each Game}}
-                <li>
-                    <h4>{{board.owner}} vs. {{board.owner}}</h4>
-                    <h5>It is {{turn}}'s turn.</h5>
-                </li>
-            {{/each}}
-            <li class="box-border border-2">
-                user1 vs. user2
-                It is user1's turn.
-            </li>
-            <li class="box-border border-2">
-                user1 vs. user2
-                It is user1's turn.
-            </li>
-        </ul>
+    <a class="flex- flex-col">
+        <div class="flex flex-col text-center box-border border-2 mt-3">
+            user1 vs. user2
+            <br>
+            It is user1's turn.
+            <button class="box-border border-2">Resume Game</button>
+        </div>
+        <div class="flex flex-col text-center box-border border-2 mt-3">
+            user1 vs. user2
+            <br>
+            It is user1's turn.
+            <button class="box-border border-2">Resume Game</button>
+        </div>
+        <div class="flex flex-col text-center box-border border-2 mt-3">
+            user1 vs. user2
+            <br>
+            It is user1's turn.
+            <button class="box-border border-2">Resume Game</button>
+        </div>
     </a>
 </div>
