--- a/views/partials/resume.handlebars
+++ b/views/partials/resume.handlebars
@@ -1,45 +1,29 @@
 
-<div class="flex flex-col ">
+<div class="flex flex-col w-80">
     <h3>Resume Game</h3>
     <a>
         <ul class="flex flex-col  border-box">
-            {{!-- {{#each Game}}
-                <li>
-                    <h4>{{board.owner}} vs. {{board.owner}}</h4>
-                    <h5>It is {{turn}}'s turn.</h5>
-                </li>
-            {{/each}} --}}
-            <li class="box-border border-2"> {{!--before--}}
-                user1 vs. user2
-                It is user1's turn.
-            </li>
-            <li class="box-border border-2"> {{!--after, which one you like?--}}
+            <li class="box-border border-2">
                 <div class="flex flex-col">
-                    <h3 class="flex bg-white text-sky-800 border-b-2 justify-center">User1 vs. User2</h3>
+                    <h4 class="flex bg-white text-sky-800 border-b-2 justify-center">User1 vs. User2</h4>
                     <p class="text-center">It is user1's turn</p>
+                    <button class="box-border border-2">Resume Game</button>
+                </div>
+            </li>
+            <li class="box-border border-2">
+                <div class="flex flex-col">
+                    <h4 class="flex bg-white text-sky-800 border-b-2 justify-center">User1 vs. User2</h4>
+                    <p class="text-center">It is user1's turn</p>
+                    <button class="box-border border-2">Resume Game</button>
+                </div>
+            </li>
+            <li class="box-border border-2">
+                <div class="flex flex-col">
+                    <h4 class="flex bg-white text-sky-800 border-b-2 justify-center">User1 vs. User2</h4>
+                    <p class="text-center">It is user1's turn</p>
+                    <button class="box-border border-2">Resume Game</button>
                 </div>
             </li>
         </ul>
-<div class="flex flex-col w-80">
-    <h3>Resume Game</h3>
-    <a class="flex- flex-col">
-        <div class="flex flex-col text-center box-border border-2 mt-3">
-            user1 vs. user2
-            <br>
-            It is user1's turn.
-            <button class="box-border border-2">Resume Game</button>
-        </div>
-        <div class="flex flex-col text-center box-border border-2 mt-3">
-            user1 vs. user2
-            <br>
-            It is user1's turn.
-            <button class="box-border border-2">Resume Game</button>
-        </div>
-        <div class="flex flex-col text-center box-border border-2 mt-3">
-            user1 vs. user2
-            <br>
-            It is user1's turn.
-            <button class="box-border border-2">Resume Game</button>
-        </div>
-    </a>
+    </a>   
 </div>
