--- a/public/css/tail-style.css
+++ b/public/css/tail-style.css
@@ -682,11 +682,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin: 0px;
 }
 
-.my-0 {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -695,12 +690,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.5rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .mt-3 {
@@ -755,18 +750,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 16.666667%;
 }
 
-.w-max {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-3\/4 {
+  width: 75%;
 }
 
 .w-80 {
   width: 20rem;
-}
-
-.list-inside {
-  list-style-position: inside;
 }
 
 .list-outside {
@@ -848,6 +841,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
@@ -860,8 +857,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 0.25rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
+.p-0 {
+  padding: 0px;
 }
 
 .py-1 {
@@ -888,14 +885,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pl-0 {
   padding-left: 0px;
-}
-
-.pl-8 {
-  padding-left: 2rem;
-}
-
-.text-left {
-  text-align: left;
 }
 
 .text-center {
@@ -948,10 +937,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .active\:outline:active {
   outline-style: solid;
-}
-
-.prose-ul\:pl-0 :is(:where(ul):not(:where([class~="not-prose"] *))) {
-  padding-left: 0px;
 }
 
 @media (min-width: 640px) {
@@ -1202,16 +1187,12 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-bottom: 0px;
   }
 
-  .sm\:prose-h3\:pl-0 :is(:where(h3):not(:where([class~="not-prose"] *))) {
-    padding-left: 0px;
-  }
-
-  .sm\:prose-p\:my-0 :is(:where(p):not(:where([class~="not-prose"] *))) {
+  .sm\:prose-h4\:my-0 :is(:where(h4):not(:where([class~="not-prose"] *))) {
     margin-top: 0px;
     margin-bottom: 0px;
   }
 
-  .sm\:prose-ul\:my-0 :is(:where(ul):not(:where([class~="not-prose"] *))) {
+  .sm\:prose-p\:my-0 :is(:where(p):not(:where([class~="not-prose"] *))) {
     margin-top: 0px;
     margin-bottom: 0px;
   }
