--- a/views/partials/join.handlebars
+++ b/views/partials/join.handlebars
@@ -1,17 +1,25 @@
 <div class="flex flex-col w-80">
-    <h3>Join</h3>
-    <a class="flex flex-col">
-        <div class="flex flex-col text-center box-border border-2 mt-3">
-            user1
-            <button class="box-border border-2">Join Game</button>
-        </div>
-        <div class="flex flex-col text-center box-border border-2 mt-3">
-            user1
-            <button class="box-border border-2">Join Game</button>
-        </div>
-        <div class="flex flex-col text-center box-border border-2 mt-3">
-            user1
-            <button class="box-border border-2">Join Game</button>
-        </div>
+    <h3>Join Game</h3>
+    <a>
+        <ul class="flex flex-col  border-box">
+            <li class="box-border border-2">
+                <div class="flex flex-col">
+                    <h4 class="flex bg-white text-sky-800 border-b-2 justify-center">User1</h4>
+                    <button class="box-border border-2">Join Game</button>
+                </div>
+            </li>
+            <li class="box-border border-2">
+                <div class="flex flex-col">
+                    <h4 class="flex bg-white text-sky-800 border-b-2 justify-center">User1</h4>
+                    <button class="box-border border-2">Join Game</button>
+                </div>
+            </li>
+            <li class="box-border border-2">
+                <div class="flex flex-col">
+                    <h4 class="flex bg-white text-sky-800 border-b-2 justify-center">User1</h4>
+                    <button class="box-border border-2">Join Game</button>
+                </div>
+            </li>
+        </ul>
     </a>
 </div>
