--- a/views/create-game.handlebars
+++ b/views/create-game.handlebars
@@ -18,7 +18,7 @@
                 </div>
                 <div class="flex flex-row" id="A">
                     <div class="pr-2 pl-2" id="LA">A</div>
-                    <div class="flex flex-col w-11 box-border border-2" id="A1"></div>
+                    <div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A1"></div>
                     <div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A2"></div>
                     <div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A3"></div>
                     <div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A4"></div>
