Fixed create-game board and buttons

--- a/views/create-game.handlebars
+++ b/views/create-game.handlebars
@@ -182,9 +182,9 @@
                 <label for="destroyer-rotate">Flip Vertical</label>
                 <input type="checkbox" name="destroyer-rotate" id="destroyer-rotate">
             </div>
-            <div class="flex flex-row justify-between">
-                <button class="box-border border-2 hover:brightness-200 hover:shadow-sm hover:shadow-white hover:bg-sky-900 active:bg-sky-800" type="submit" id="submit-board">Submit</button>
-                <button class="box-border border-2 hover:brightness-200 hover:shadow-sm hover:shadow-white hover:bg-sky-900 active:bg-sky-800" type="button" id="preview-btn">Preview</button>
+            <div class="flex flex-row justify-evenly">
+                <button class="px-2 box-border border-2 hover:brightness-200 hover:shadow-sm hover:shadow-white hover:bg-sky-900 active:bg-sky-800" type="button" id="preview-btn">Preview</button>
+                <button class="px-2 box-border border-2 hover:brightness-200 hover:shadow-sm hover:shadow-white hover:bg-sky-900 active:bg-sky-800" type="submit" id="submit-board">Submit</button>
             </div>
         </form>
     </div>
