--- a/views/partials/join.handlebars
+++ b/views/partials/join.handlebars
@@ -5,7 +5,7 @@
             <li class="box-border border-2">
                 <div class="flex flex-col">
                     <h4 class="flex bg-white text-sky-800 justify-center">User1</h4>
-                    <button class="box-border border-2 hover:brightness-200 hover:shadow-inner hover:shadow-white hover:bg-sky-900 active:bg-sky-800">Join Game</button>
+                    <button class="box-border border-2 hover:brightness-200 hover:shadow-inner hover:shadow-white hover:bg-sky-900 active:bg-sky-800"">Join Game</button>
                 </div>
             </li>
             <li class="box-border border-2">
