update join partial style

--- a/views/partials/join.handlebars
+++ b/views/partials/join.handlebars
@@ -2,22 +2,22 @@
     <h3>Join Game</h3>
     <a>
         <ul class="flex flex-col  border-box">
-            <li class="box-border border-2">
-                <div class="flex flex-col">
-                    <h4 class="flex bg-white text-sky-800 justify-center">User1</h4>
-                    <button class="box-border border-2 hover:brightness-200 hover:shadow-inner hover:shadow-white hover:bg-sky-900 active:bg-sky-800">Join Game</button>
+            <li>
+                <div class="flex flex-col text-center justify-center p-6 rounded-lg shadow-lg bg-white max-w-full">
+                    <h4 class="text-black text-xl font-medium mb-2">User1</h4>
+                    <button type="button" class="border-2 border-transparent rounded-xl outline hover:shadow-xl hover:brightness-200 hover:bg-sky-900  hover:shadow-black active:bg-sky-800">Join Game</button>
                 </div>
             </li>
-            <li class="box-border border-2">
-                <div class="flex flex-col">
-                    <h4 class="flex bg-white text-sky-800 justify-center">User1</h4>
-                    <button class="box-border border-2 hover:brightness-200 hover:shadow-inner hover:shadow-white hover:bg-sky-900 active:bg-sky-800">Join Game</button>
+            <li>
+                <div class="flex flex-col text-center justify-center p-6 rounded-lg shadow-lg bg-white max-w-full">
+                    <h4 class="text-black text-xl font-medium mb-2">User1</h4>
+                    <button type="button" class="border-2 border-transparent rounded-xl outline hover:shadow-xl hover:brightness-200 hover:bg-sky-900  hover:shadow-black active:bg-sky-800">Join Game</button>
                 </div>
             </li>
-            <li class="box-border border-2">
-                <div class="flex flex-col">
-                    <h4 class="flex bg-white text-sky-800 justify-center">User1</h4>
-                    <button class="box-border border-2 hover:brightness-200 hover:shadow-inner hover:shadow-white hover:bg-sky-900 active:bg-sky-800">Join Game</button>
+            <li>
+                <div class="flex flex-col text-center justify-center p-6 rounded-lg shadow-lg bg-white max-w-full">
+                    <h4 class="text-black text-xl font-medium mb-2">User1</h4>
+                    <button type="button" class="border-2 border-transparent rounded-xl outline hover:shadow-xl hover:brightness-200 hover:bg-sky-900  hover:shadow-black active:bg-sky-800">Join Game</button>
                 </div>
             </li>
         </ul>
