Updated join list and setup routes to join a game

--- a/views/partials/join.handlebars
+++ b/views/partials/join.handlebars
@@ -2,7 +2,7 @@
     <h3>Join Game</h3>
     <a>
         <ul class="flex flex-col  border-box">
-            <li>
+            <!-- <li>
                 <div class="flex flex-col text-center justify-center p-6 rounded-lg shadow-lg bg-white max-w-full">
                     <h4 class="text-black text-xl font-medium mb-2">User1</h4>
                     <button type="button" class="border-2 border-transparent rounded-xl outline hover:shadow-xl hover:brightness-200 hover:bg-sky-900  hover:shadow-black active:bg-sky-800">Join Game</button>
@@ -19,7 +19,16 @@
                     <h4 class="text-black text-xl font-medium mb-2">User1</h4>
                     <button type="button" class="border-2 border-transparent rounded-xl outline hover:shadow-xl hover:brightness-200 hover:bg-sky-900  hover:shadow-black active:bg-sky-800">Join Game</button>
                 </div>
-            </li>
+            </li> -->
+			{{#each joinList}}
+			<li>
+				<div class="flex flex-col text-center justify-center p-6 rounded-lg shadow-lg bg-white max-w-full">
+					<h4 class="text-black text-xl font-semibold">Game: {{this.gameId}}</h4>
+					<p class="text-black text-base font-medium mb-2">{{this.enemy}}</p>
+					<button id="{{this.gameId}}" type="button" class="border-2 border-transparent rounded-xl outline hover:shadow-xl hover:brightness-200 hover:bg-sky-900  hover:shadow-black active:bg-sky-800">Join Game</button>
+				</div>
+			</li>
+			{{/each}}
         </ul>
     </a>
 </div>
