--- a/views/partials/join.handlebars
+++ b/views/partials/join.handlebars
@@ -1,7 +1,7 @@
 <div class="flex flex-col w-80">
     <h3>Join Game</h3>
     <a>
-        <ul class="flex flex-col  border-box">
+        <ul id="joinList" class="flex flex-col border-box">
             <!-- <li>
                 <div class="flex flex-col text-center justify-center p-6 rounded-lg shadow-lg bg-white max-w-full">
                     <h4 class="text-black text-xl font-medium mb-2">User1</h4>
@@ -32,3 +32,4 @@
         </ul>
     </a>
 </div>
+<script src="/javascript/join.js"></script>
