Updated profile information slightly

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,8 +1,8 @@
 <div class="flex flex-col sm:flex-row justify-around">
     <div>
         <h3>Account</h3>
-        <h4>{{user_name}}</h4>
-        <h4>Profile created on:{{user.createdat}}</h4>
+        <h4>Username: {{user_name}}</h4>
+        <h4>Profile created: {{createdAt}}</h4>
     </div>
     {{> resume}}
 </div>
