update dashboard mobile

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <section class="flex flex-col justify-center">
     <a href="/game/create"><button id="createGame" class="w-full border-2 border-transparent rounded-xl outline hover:shadow-xl hover:brightness-200 hover:bg-sky-900  hover:shadow-black active:bg-sky-800" type="submit">Create New Game</button></a>
-    <div class="flex justify-around">
+    <div class="flex justify-around flex-wrap">
         {{> resume}}
         {{> join}}
     </div>
