update mobile response

--- a/views/create-game.handlebars
+++ b/views/create-game.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <div class="game-builder h-full w-full flex flex-col sm:flex-row justify-evenly">
+    <div class="game-builder h-full w-full flex flex-col sm:flex-row justify-evenly flex-wrap">
         <div class="flex flex-row" id="board-builder">
             <div class="flex flex-col mr-2 ml-2" id="game-player">
                 <h2>Create Your Board</h2>
