--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -1,6 +1,6 @@
 <div>
 	<div class="game-area h-full w-full flex flex-col">
-		<div class="flex flex-row" id="boards">
+		<div class="flex flex-row flex-wrap" id="boards">
 			<div class="flex flex-col mr-2 ml-2" id="game-enemy">
 				<h2 id="enemy-name" class="text-center">No Enemy Yet</h2>
 				<div class="flex flex-row justify-between" id="number-grid">
@@ -18,7 +18,7 @@
 				</div>
 				<div class="flex flex-row" id="A">
 					<div class="pr-2 pl-2" id="LA">A</div>
-					<div class="flex flex-col w-11 box-border border-2" id="A1"></div>
+					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A1"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A2"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A3"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A4"></div>
@@ -168,7 +168,7 @@
 				</div>
 				<div class="flex flex-row" id="A">
 					<div class="pr-2 pl-2" id="LA">A</div>
-					<div class="flex flex-col w-11 box-border border-2" id="A1"></div>
+					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A1"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A2"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A3"></div>
 					<div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="A4"></div>
