Get rid of settings cog, added styling

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,8 +14,8 @@
     </head>
     <body class="bg-slate-900 text-slate-300 font-mono prose-md sm:prose-xl sm:prose-ul:pl-0 sm:prose-h4:my-0 sm:prose-li:pl-0 sm:prose-p:my-0 sm:prose-img:my-0 sm:prose-p:mb-2">
         <header class="flex flex-col justify-between p-3">
-            <a class="flex justify-end" href="/"><span class="oi border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" data-glyph="cog"></span></a>
-        
+            {{!-- <a class="flex justify-end" href="/"><span class="oi border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" data-glyph="cog"></span></a>
+         --}}
             <div class="flex flex-col justify-between sm:flex-row">
                 <a class="flex justify-center prose-lg sm:items-center" href="/">
                     <h1 class="sm:mb-0">ChattleShip</h1>
