--- a/public/css/tail-style.css
+++ b/public/css/tail-style.css
@@ -4074,6 +4074,19 @@ textarea.form-control.is-invalid {
   left: 0px;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
+.m-3 {
+  margin: 0.75rem;
+}
+
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -4448,6 +4461,11 @@ textarea.form-control.is-invalid {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-medium {
