--- a/views/partials/resume.handlebars
+++ b/views/partials/resume.handlebars
@@ -1,10 +1,10 @@
 
 <div class="flex flex-col w-80">
-    <h3>Resume Game</h3>
+    <h3 class="text-2xl text-center">Resume Game</h3>
     <a>
         <ul class="flex flex-col  border-box">
 			{{#each resumeList}}
-			<li>
+			<li class="m-3">
 				<div class="flex flex-col text-center justify-center p-6 rounded-lg shadow-lg bg-white max-w-full">
 					<h4 class="text-black text-xl font-semibold">Game: {{this.gameId}}</h4>
 					<h5 class="text-black text-l font-medium">{{this.player1}} vs. {{this.player2}}</h5>
