--- a/views/partials/chat.handlebars
+++ b/views/partials/chat.handlebars
@@ -6,11 +6,11 @@
         
         
 	</ul>
-    <div class="flex flex-row h-full w-full">
-        <form id="chat-form">
+    <div class="flex flex-row w-full">
+        <form class="flex flex-row flex-nowrap " id="chat-form">
 			<label class="px-1" for="chat-input">Chat</label>
-            <input class="text-black h-2/3 w-2/3 pl-1 mt-1" type="text" id="chat-input" />
-            <button class="p-1 w-1/6 hover:brightness-200 hover:shadow-inner hover:shadow-white bg-slate-600 active:bg-slate-700 active:bg-sky-800" type="submit">
+            <input class="text-black w-2/3 pl-1 mt-1 mx-1" type="text" id="chat-input" />
+            <button class="p-1 w-1/6 mt-1 hover:brightness-200 hover:shadow-inner hover:shadow-white bg-slate-600 active:bg-slate-700 active:bg-sky-800" type="submit">
                 <span class="oi" data-glyph="comment-square"></span>
             </button>
         </form>
