--- a/views/create-game.handlebars
+++ b/views/create-game.handlebars
@@ -148,7 +148,7 @@
                 </div>
             </div>
         </div>
-        <form class="flex flex-col justify-evenly w-64" id="board-form">
+        <form class="flex flex-col justify-center sm:justify-evenly w-64" id="board-form">
             {{!-- Carrier form --}}
             <div>
                 <label for="carrier">Carrier - 5 Spaces</label>
