--- a/views/partials/chat.handlebars
+++ b/views/partials/chat.handlebars
@@ -1,6 +1,7 @@
-<div class="flex flex-col box-border border-2 p-3 lg:w-full mt-8">
-	<title class="border-2">Game Chat</title>
-	<ul id="chatArea" class="chat-area flex flex-col h-3/4 border-2 py-1" data-chat-id="{{enemyBoard.user.dataValues.id}}">
+
+<div class="flex flex-col content-center justify-center box-border border-2 p-2 h-3/4 lg:w-full mt-8">
+	
+	<ul id="chatArea" class="chat-area overflow-y-scroll flex flex-col h-72 lg:h-96 border-2 py-1" data-chat-id="{{enemyBoard.user.dataValues.id}}">
 		
         {{!-- Enter in dynamically manipulated code from users as list items --}}
         
