Added footer touch-ups

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -73,8 +73,10 @@
 	<main class="h-full flex flex-col w-full border-2 box-border p-6 ">
 		{{{body}}}
 	</main>
-	<footer class="flex flex-col items-center">
-		Brought to you by Hyper J
+	<footer class="flex justify-center">
+		<div>Brought to you by Hyper J</div>
+        <span class="px-4"> | </span>
+        <div class="hover:brightness-200 active:bg-slate-600"><a href="https://github.com/JoelKovalcson/ChattleShip">View on GitHub</a></div>
 	</footer>
 </body>
 <script src="/javascript/src/index.min.js"></script>
